Finpudsning af data håndtering i billetvælgeren
